# Claims-Checker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: claims.py  health.py
app/claims/: decision_engine.py  models.py  processor.py
app/core/: config.py  logging.py
app/output/: formatter.py
app/prompts/: appeal_letter.py  medical_necessity.py
app/rag/: embeddings.py  indexer.py  retriever.py
data/mock_claims/: denial_test_001.json  inpatient_claim_001.json  outpatient_claim_002.json
n8n/: README.md
n8n/credentials/: credentials_template.md
n8n/workflows/: 01_nightly_claims_pipeline.json  02_single_claim_verification.json
scripts/: add_policy.py  batch_processor.py  ehr_connector.py  generate_mock_claims.py  ingest_policies.py  nightly_pipeline.py
tests/: test_api.py  test_claims.py  test_rag.py
